# onto-transponder-gpl

./: CONTRIBUTING.md  GPL-3.0+Invariant-Compliance.md  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: default.yaml  temperament_bindings.yaml
docs/: architecture-overview.md  build-instructions.md  ethical-requirements.md  integration-ecosystem.md  invariant-schema-spec.yaml  license-compliance-model.md  ontological-boundaries.md  philosophical-foundations.md  security-model.md  signal_protocol.md  transponder_architecture.md
examples/: basic_usage.py  crisis_response.py  onto16_to_emitter_pipeline.py  transponder_gaming_demo.py  transponder_medical_demo.py
github/workflows/: ci.yml
legal/: GPL-3.0+Invariant-Compliance.md  GPL-compliance-checklist.md  boxed_implementation.md
specs/: debarkader-absence-declaration.md  onto16-onto8-interchange.yaml  ontocoder-integration-spec.md  temperament-activation-rules.yaml  vma-policy-binding.json
specs/core/: invariants-schema.md
specs/security/: SECURITY-ONTO144-INTEGRITY.md
src/architectures/: behav_mod.py  onto_richness.py
src/core/: signal_validator.py  transponder.py
src/interfaces/: emitter_bridge.py  onto144_connector.py
src/ontotransponder/: __init__.py  core.py
src/ontotransponder/emitter/: __init__.py  scene_renderer.py
src/ontotransponder/ingress/: __init__.py  base.py  binary_ingress.py  json_ingress.py  websocket_ingress.py
src/ontotransponder/invariant_core/: __init__.py  registry.py
src/ontotransponder/invariant_core/archetypal/: ancestral_grounding.yaml  death_rebirth.yaml  persona.yaml  polarity.yaml  selfhood.yaml  symbolism.yaml
src/ontotransponder/invariant_core/identity/: agency.yaml  coherence.yaml  ethical_backbone.yaml  meaning_core.yaml  narrative_continuity.yaml  openness.yaml  self_worth.yaml
src/ontotransponder/invariant_core/structural/: absurd_as_relation.yaml  bodily_apriority.yaml  dialogicity.yaml  dynamic_equilibrium.yaml  energy_minimization.yaml  fundamental_constants.yaml  here_and_now.yaml  interaction.yaml  narrative_inevitability.yaml  responsibility.yaml  solitary_solidarity.yaml  structural_appearance.yaml  symmetry_conservation.yaml  uncertainty_determinism.yaml
src/ontotransponder/knowledge_management/: __init__.py  meta_ontology.py  onto16.py  onto8.py
src/ontotransponder/normalizers/: __init__.py  onto16_normalizer.py
src/ontotransponder/provenance/: __init__.py  trace.py
src/protocols/: license_guard.py  vma_signer.py
src/utils/: crypto_utils.py  hardware_probe.py
tests/: test_emitter.py  test_ingress.py  test_invariant_registry.py
tests/integration/: test_emitter_transponder_flow.py
tests/unit/: test_signal_validation.py  test_transponder.py
tree/main/: Cargo.toml  LICENSE.txt  README.md  experiment.rs
tree/main/logs/: sample-run.ndjson
tree/main/onto16/: lib.rs
tree/main/profiles/: SE-07-MZ-phi.onto16.json
tree/main/triggers/: stress-phi-07.onto  stress-phi-07.onto.txt
