```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-transponder"
version = "0.1.0"
description = "A GPL-3.0 synthetic cognitive transponder governed by ontological invariants"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "OntoCoder Collective", email = "contact@ontocoder.example"},
]
maintainers = [
    {name = "OntoCoder Collective", email = "contact@ontocoder.example"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Philosophy",
]
keywords = [
    "synthetic-mind", "ontology", "invariants", "ethical-ai", "onto16", "noema",
    "gpl3", "reflective-cognition", "archetypal-computing"
]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.18",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ontocoder/onto-transponder"
Documentation = "https://github.com/ontocoder/onto-transponder/tree/main/docs"
Repository = "https://github.com/ontocoder/onto-transponder.git"
License = "https://github.com/ontocoder/onto-transponder/blob/main/LICENSE"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ontotransponder*"]

[tool.setuptools.package-data]
ontotransponder = [
    "invariant_core/**/*.yaml",
    "py.typed"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 99
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 99
```