[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-transponder-gpl"
version = "0.2.0"
description = "GPL-3.0-only synthetic transponder for ontologically grounded signal emission and routing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "gold-email@example.org" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyyaml >=6.0",
    "jsonschema >=4.18.0",
    "cryptography >=41.0.0",
    "typing-extensions >=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.4.0",
    "pytest-cov >=4.1.0",
    "black >=23.7.0",
    "mypy >=1.5.0",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/yourorg/onto-transponder-gpl"
Repository = "https://github.com/yourorg/onto-transponder-gpl"
Documentation = "https://github.com/yourorg/onto-transponder-gpl/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
files = ["src", "tests"]